@@ -12,7 +12,6 @@ import ar.edu.unq.po2.TerminalPortuaria.Buque.Buque;
 import ar.edu.unq.po2.TerminalPortuaria.Buque.Coordenada;
 import ar.edu.unq.po2.TerminalPortuaria.BusquedaMaritima.Busqueda;
 import ar.edu.unq.po2.TerminalPortuaria.NavierasYCircuitos.Circuito;
-import ar.edu.unq.po2.TerminalPortuaria.NavierasYCircuitos.E_MejorRuta;
 import ar.edu.unq.po2.TerminalPortuaria.NavierasYCircuitos.LineaNaviera;
 import ar.edu.unq.po2.TerminalPortuaria.NavierasYCircuitos.Viaje;
 import ar.edu.unq.po2.TerminalPortuaria.Orden.Orden;
@@ -24,26 +23,27 @@ public class TerminalPortuaria {
 
 
 	private String nombre;
+	private Coordenada coordenada;
 	private List<LineaNaviera> misNavieras = new ArrayList<>();
 	private Set<Orden> ordenes = new HashSet<>();
 	private E_MejorRuta estrategia;
 	private Busqueda busquedaMaritima;
 
 
-	public TerminalPortuaria() {}
-
-	public TerminalPortuaria(String nombre)
+	public TerminalPortuaria(String nombre, Coordenada coordenada)
 	{
+		this.coordenada = coordenada;
 		this.nombre = nombre;
-		this.misNavieras = new ArrayList<>();
-		this.ordenes = new HashSet<>();
 	}
-
 
 
 	public List<LineaNaviera> getMisNavieras()
 	{
 		return this.misNavieras;
+	}
+	
+	public Set<Orden> getOrdenes() {
+		return this.ordenes;
 	}
 
 
@@ -59,16 +59,20 @@ public class TerminalPortuaria {
 //		this.busquedaMaritima.filtrar(this.getMisViajes());
 //	}
 	
-	 public void setMejorCircuito( E_MejorRuta estrategia ) {
+	 public void setEstrategia( E_MejorRuta estrategia ) {
 	 	this.estrategia = estrategia;
+	 }
+	 
+	 public E_MejorRuta getEstrategia() {
+		 return this.estrategia;
 	 }
 
 
-//	 public Circuito getMejorCircuito() {
-//	 }
+	 public Circuito getMejorCircuito(TerminalPortuaria terminalDestino) {
+		 return estrategia.mejorCircuitoHacia(terminalDestino);
+	 }
 
 
-//
 //	public void darAvisoShippers( Viaje viaje )
 //	{
 //		List<Orden> ordenesExportacion = ordenes.stream().filter( o -> o.esOrdenExportacion() ).toList();
@@ -76,11 +80,11 @@ public class TerminalPortuaria {
 //
 //		listaConsignees.stream().forEach( c -> c.recibirMail("Su carga está llegando") );
 //	}
-
+//
 //	public void darAvisoConsignees( Viaje viaje )
 //	{
 //		List<Orden> ordenesImportacion = ordenes.stream().filter( o -> o.esOrdenImportacion() ).toList();
-//		List<Cliente> listaConsignees = ordenesImportacion.stream().filter( o -> o.getViaje() == viaje ).map( v -> v.getCliente() ).toList();
+//		List<Cliente> listaConsignees = ordenesImportacion.stream().filter( o -> o.getViaje() == viaje ).map( v -> v.getCliente() ).collect(Collectors.toList());
 //		listaConsignees.stream().forEach( c -> c.recibirMail("Su carga ha salido de la terminal") );
 //	}
 
@@ -91,28 +95,28 @@ public class TerminalPortuaria {
 	}
 
 
-	public void registrasNuevaOrden(Orden orden)
+	public void registrarNuevaOrden(Orden orden)
 	{
 		this.ordenes.add(orden);
 	}
 
-//  
-//	public void registrarNuevaNaviera(LineaNaviera nav)
-//	{
-//		if ( this.estoyEnUnCircuitoDeLaNaviera(nav) )
-//		{
-//			this.misNavieras.add(nav);
-//		}
-//	}
+
+	public void registrarNuevaNaviera(LineaNaviera nav)
+	{
+		if ( this.estoyEnUnCircuitoDeLaNaviera(nav) )
+		{
+			this.misNavieras.add(nav);
+		}
+	}
 
 
-//	public boolean estoyEnUnCircuitoDeLaNaviera(LineaNaviera nav)
-//	{
-//		List<Circuito> circuitosNaviera = nav.getCircuitos();
-//		return circuitosNaviera.stream().anyMatch(cir->cir.validarSiTerminalExisteEnCircuito(this));
-//	}
+	public boolean estoyEnUnCircuitoDeLaNaviera(LineaNaviera nav)
+	{
+		List<Circuito> circuitosNaviera = nav.getCircuitos();
+		return circuitosNaviera.stream().anyMatch(cir->cir.terminalExisteEnElCircuito(this));
+	}
 
-	public void trabajoCargaYDescarga(Buque buque) throws Exception
+	public void working(Buque buque) throws Exception
 	{
 		buque.working();
 	}
@@ -128,7 +132,7 @@ public class TerminalPortuaria {
 		this.validarCamion(camion, orden);
 		this.validarChofer(chofer, orden);
 		this.validarHorarioDeEntrega(orden);
-		orden.registrarEntregaContainer();
+		this.registrarNuevaOrden(orden);
 	}
 
 
@@ -136,7 +140,7 @@ public class TerminalPortuaria {
 	{
 		this.validarCamion(camion, orden);
 		this.validarChofer(chofer, orden);
-		orden.registrarSalidaContainer();
+		this.registrarNuevaOrden(orden);
 	}
 
 
@@ -185,15 +189,10 @@ public class TerminalPortuaria {
 
 	 public Coordenada getCoordenadas() {
 		// TODO Auto-generated method stub
-		return null;
+		return this.coordenada;
 	 }
 
 	 public void proximoAArribar(Viaje viaje) {
-		// TODO Auto-generated method stub
-		
-	 }
-
-	 public void working(Buque buque1) {
 		// TODO Auto-generated method stub
 		
 	 }
